--- a/CSS_code.css
+++ b/CSS_code.css
@@ -1,30 +1,83 @@
-* { 
+*{ 
     margin: 0; 
     padding: 0; 
     box-sizing: border-box; 
-    } 
-    body { 
-    background: #00af00; 
-    font-size: 12px; 
-    } 
-    
-    .container { 
-    flex: 0 1 700px; 
-    margin: auto; 
-    padding: 10px; 
-    } 
-    
-    .screen-body-item { 
-    flex: 1; 
-    padding: 50px; 
-    } 
-    input { 
-    margin: 10px 10px 10px; 
-    } 
-    .showdata { 
+} 
+body { 
+    background: #d3d3d3;     
+} 
+
+.container { 
+    width:100%;
+    height: 80vh;
+    background-color: #d3d3d3;
+} 
+.container .app{
+    height: 70vh;
+    width: 426px;
+    border-radius: 17px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #f6f6f6;
+    box-shadow: rgb(21 21 22) 0px 20px 30px --10px;
+}
+.flex-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+h1{
+    position: relative;
+    top: 20%;
+    text-align: center;
+    padding-bottom: 39px;
+    font-size: 30px;
+    color: black;
+}
+.form-group{
+    margin: 10px 0px;
+}
+.form-group input{ 
+    width: 92%;
+    height: 42px;
+    margin: 5px;
+    outline: none;
+    border: none;
+    font-weight: bold;
+    text-indent: 20px;
+    border-radius: 18px;
+    padding: 3px 2px;
+    transition: transform 1s; 
+} 
+.form-group input:hover{
+    transform: perspective(200px) rotateY(10deg);
+}
+::placeholder{
+    font-weight: bold;
+    text-indent: 30px;
+    padding: 3px 5px;
+    color: #000;
+}
+.btn{
+    cursor: pointer;
+    outline:none;
+    border: none;
+    font-weight: bold;
+    padding: 12px 65px;
+    color: #000;
+    margin: -1px 92px;
+    font-size: 20px;
+    border-radius: 31px;
+    background-color: #fff;
+    box-shadow: rgba(0, 0,0,0.35) 0px 5px 15px;
+    background-image: linear-gradient(#9ec14c,#41b14f);
+}
+#showdata { 
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black; 
-    font-size: 1.2rem; 
+    font-size: 1 rem; 
+    margin-left: 10%;
     padding-top: 10px; 
     padding-bottom: 10px; 
-    } 
-    
+} 
+
